fix alignment of items in tweet header

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+.nav-header {
   display: flex;
   flex-direction: column;
   align-items: center;
